# WEB_HW_11_FastAPI_Contacts

./: .gitignore  main.py  pyproject.toml  requirements.txt  test.sqlite  test_runner.py
docs/source/: conf.py  index.rst
src/: schemas.py
src/conf/: config.py
src/database/: config.ini  db.py  models.py
src/repository/: addressbook.py  birthday.py  contacts.py  emails.py  phones.py  search.py  users.py
src/routes/: addressbook.py  auth.py  birthday.py  contacts.py  emails.py  phones.py  search.py  users.py
src/schemas/: addressbook.py  search.py  user.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: password_template.html
src/static/: headers.css
src/templates/: index.html  login.html  signup.html
tests/: test_repository_addressbook.py  test_route_auth.py  test_router_token_email_password.py
