[tool.poetry]
name = "web-hw-11-fastapi-contacts"
version = "0.1.0"
description = ""
authors = ["Revuka Oleksandr <a.revuka@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_11_fastapi_contacts"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.2"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.3.0"}
phonenumbers = "^8.13.20"
jinja2 = "^3.1.2"
jose = "^1.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
libgravatar = "^1.0.4"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
mypy = "^1.4.1"
black = "^23.3.0"
coverage = "^7.2.7"
pre-commit = "^3.3.3"
pyupgrade = "^3.7.0"
ruff = "^0.0.275"
rich = "^13.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "/home/alex/python_projects/WEB_HW_7_students/alembic/"
]

[tool.ruff]
line-length=130

[mypy]
dmypyExecutable = "/home/alex/python_projects/WEB_HW_6_SQL/.venv/bin/dmypy"
